--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "vue-router": "^4.2.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-carousel": "^0.3.1",
+    "luxon": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
